# cloistr-signer

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Makefile  config.example.yaml  go.mod  go.sum
cmd/migrate/: main.go
cmd/signer/: main.go
deploy/: postgres.yaml
docs/: admin-guide.md  api-reference.md  blog-signer-chaining.md  cloudflare-drop-plan.md  concepts.md  discovery-integration.md  frost-2-of-n-design.md  frost-cosigning-design.md  frost-integration.md  privacy-architecture.md  reference.md  roadmap.md  self-hosting.md  signer-chaining.md  telegram-summary.md  user-guide.md
internal/admin/: admin.go  admin_test.go
internal/api/: frost_cosign_listener.go  frost_migrate.go  frost_migrate_b.go  frost_share_transfer.go  frost_sign.go  frost_user_dkg.go  frost_user_dkg_test.go  handler.go  handler_nostrconnect_test.go  handler_register_key_test.go  handler_test.go  integration_test.go
internal/audit/: audit.go  audit_test.go
internal/auth/: auth.go  auth_test.go
internal/bunker/: bunker.go  bunker_test.go
internal/config/: config.go  config_test.go
internal/crypto/: crypto.go  crypto_test.go  recovery_phrase.go  recovery_phrase_test.go  vault_encryptor.go  vault_encryptor_test.go  verify_test.go
internal/discovery/: discovery.go  discovery_test.go  selector.go  selector_test.go
internal/frost/: bip340_frost.go  coordinator.go  dkg.go  dkg_distributed.go  dkg_distributed_test.go  dkg_test.go  frost.go  frost_test.go  protocol.go  protocol_test.go  remote_signer.go  remote_signer_test.go  user_dkg.go  user_dkg_test.go  user_signer.go  user_signer_test.go
internal/metrics/: metrics.go  metrics_test.go
internal/nip05/: nip05.go  nip05_test.go
internal/nip89/: nip89.go  nip89_test.go
internal/nostr/: client.go  client_test.go  dm.go  (+1 more)
load-test/: README.md
scripts/: copy-icons.sh
ui/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts
ui/frost-wasm/: .gitignore  Cargo.toml  README.md
ui/frost-wasm/src/: lib.rs
(+80 files in other folders)
