[package]
name = "cloistr-frost-wasm"
version = "0.1.0"
edition = "2021"
description = "Browser-side FROST 2-of-N user-cosigner share holder for cloistr-signer. See docs/frost-2-of-n-design.md."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# secp256k1 primitives (RustCrypto). We do NOT use a high-level FROST crate
# here: the wire format must match the Go signer-side implementation in
# internal/frost/user_dkg.go, which uses bytemare/ecc. Reimplementing the
# 2-of-N degree-1 polynomial math directly keeps the two sides byte-for-byte
# compatible. ZcashFoundation's frost-secp256k1 stays an option for the
# later signing primitives (P4).
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "schnorr"] }
elliptic-curve = { version = "0.13", default-features = false, features = ["arithmetic"] }
sha2 = { version = "0.10", default-features = false }

# WASM-side glue
wasm-bindgen = "0.2"
js-sys = "0.3"

# Random number generation in a WASM environment. getrandom routes to the
# browser's crypto.getRandomValues via the "js" feature.
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Hex encoding/decoding
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Smaller WASM output. The size cost matters because this module loads in
# the browser at signing time.
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# wasm-pack post-processing. The bundled wasm-opt has bulk-memory off by
# default; modern Rust/LLVM emits bulk-memory ops (memory.copy etc.), so
# we enable the proposal explicitly. -O keeps the size optimization that
# wasm-pack runs in release mode.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
